# CLARA-Care

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  azure-pipelines.yml  context.md
.github/: CODEOWNERS  (+1 more)
services/api/: README.md  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 20260324_0001_init_users_sessions_queries.py  20260329_0003_knowledge_sources.py  20260330_0004_user_consent_logs.py
services/api/src/clara_api/: __init__.py  main.py  schemas.py
services/api/src/clara_api/api/: deps.py  router.py
services/api/src/clara_api/clients/: __init__.py  base_client.py  pubmed.py
services/api/src/clara_api/core/: attribution.py  auth_email.py  config.py  consent.py  exceptions.py  flow_event_store.py  login_guard.py  markdown_docx.py  metrics.py  rate_limit.py  rbac.py  security.py
services/api/src/clara_api/db/: models.py  session.py
services/api/src/clara_api/scripts/: __init__.py  seed_vn_davidrug_dictionary.py
services/api/tests/: conftest.py  test_auth_and_rbac.py  test_auth_email_delivery.py  test_auth_me_and_mobile_summary.py  test_auth_security_hardening.py  test_careguard_cabinet_endpoints.py  test_chat_proxy.py  test_council_proxy.py  test_p2_proxy_endpoints.py  test_research_conversations.py  test_source_hub_sync.py  test_system_control_tower_config.py  test_system_endpoints.py  test_workspace_endpoints.py
services/ml/: Dockerfile  README.md  pyproject.toml
services/ml/src/clara_ml/: __init__.py  config.py  main.py  routing.py
services/ml/src/clara_ml/agents/: base.py  careguard.py  council.py  council_intake.py  langgraph_workflow.py  registry.py  research_tier2.py  scribe_soap.py
services/ml/src/clara_ml/clients/: drug_sources.py
services/ml/src/clara_ml/factcheck/: __init__.py  fides_lite.py  nli_verifier.py
services/ml/tests/: test_careguard_agent.py  test_external_gateway.py  test_factcheck_module.py  test_main_api.py  test_nli_verifier.py  test_nlp_modules.py  test_prompt_loader.py  test_rag_pipeline.py  test_registry.py  test_research_tier2_agent.py  test_retrieval_reranker.py  test_router.py  test_score_engine.py
(+329 files in other folders)
